# demo-pypi

./: LICENSE  README.md  pyproject.toml  rsh7test.py
.github/workflows/: package.yml
