[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "rsh7test"
author = "Radovan Bast"
author-email = "radovan.bast@uit.no"
home-page = "https://github.com/ResearchSoftwareHour/demo-pypi"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file="README.md"

[tool.flit.scripts]
myscript = "rsh7test:main"
